APIs: - Created a few new packages for the different APIs
Messaging
- Started working on the messaging system
- Created a message class

--- a/src/dosna/todo
+++ b/src/dosna/todo
@@ -1,2 +1,4 @@
 Create a class that has quick static methods auto-displays the different error windows.
     - Error: Content not saved - check your network connection
+Create the Interfaces for the Core events
+Create the GUI Block and menu interface
